<?xml version="1.0"?>
<package>
  <name>pfa</name>
  <version>1.0.0</version>
  <description>The package</description>
  <maintainer email="dhiaeddine0@gmail.com">dhia</maintainer>
<license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>  
  <build_depend>nodelet</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>

 
  
<export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
